...
        increment = { reduce<Main> { (counter + 1).let { copy(counter = it, display = it.toString()) } } },
        decrement = { reduce<Main> { (counter - 1).let { copy(counter = it, display = it.toString()) } } },
        restart = { reduce<Main> { copy(counter = 0, display = "0") } },
        random = {
            sideEffect<Main>(
                recover = {
                    reduce<Main> { copy(loading = false, display = "Bad number") }
                    RandomFail.track()
                }
            ) {
                reduce<Main> { copy(loading = true) }
                val randomCount = randomNumberUseCase()
                RandomSuccess(randomCount).track()
...
